# avahi-aliases-rs

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.cspell/: custom-dictionary-folder-avahi-aliases-rs.txt
.github/workflows/: rust.yml  x86-64.yml
avahi-alias/: Cargo.toml
avahi-alias-daemon/: Cargo.toml
avahi-alias-daemon/src/: main.rs
avahi-alias/src/: main.rs
avahi-aliases-lib/: Cargo.toml
avahi-aliases-lib/src/: alias.rs  aliases_file.rs  avahi_dbus.rs  encoding.rs  lib.rs  line.rs  logging.rs  options.rs
avahi-aliases-lib/src/avahi_dbus/: constants.rs  entry_group.rs  server.rs
etc/: avahi-aliases  avahi-aliases.service
src/: alias.rs  aliases_file.rs  avahi.rs  avahi_client.rs  avahi_dbus.rs  encoding.rs  error.rs  lib.rs  line.rs  logging.rs  options.rs  validation.rs
src/aliases/: aliases_file.rs  mod.rs
src/avahi_client/: avahi.rs  avahi_dbus.rs  avahi_record.rs  dbus_constants.rs  entry_group.rs  enums.rs  interface.rs  mod.rs  protocol.rs  record_class.rs  record_type.rs  server.rs
src/avahi_client/avahi_dbus/: constants.rs  mod.rs  server.rs
src/avahi_client/enums/: client_state.rs  entry_group_state.rs  interface.rs  macros.rs  mod.rs  protocol.rs  record_class.rs  record_type.rs  server_state.rs
src/avahi_dbus/: constants.rs  entry_group.rs
src/cnames/: cnames_file.rs  line.rs  mod.rs
test-data/: README.md  baseline-aliases  baseline-invalid-aliases  expected-add-result  expected-list-result  expected-list-result-invalid-aliases  expected-remove-force-result  expected-remove-result
