[package]
name = "avahi-aliases"
version = "0.1.0"
authors = [ "Scott G. Ainsworth" ]
edition = "2021"
description = "Avahi aliases manager"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["avahi", "zeroconf", "bonjour"]
categories = ["command-line-utilities", "os::linux-apis"]
publish = false
default-run = "avahi-alias"

[badges]
maintainance = { status = "experimental" }

[profile.release]
debug = false
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"

[dependencies]
structopt = { version = "0.3.25", default-features = false, features = [ "paw" ] }
paw = "1.0.0"
log = "0.4.14"
env_logger = "0.9.0"
users = "0.11.0"
clap = "2.33.3"
time = { version = "0.3.5", features = [ "formatting" ] }
syslog = "5.0.0"
thiserror = "1.0.30"
anyhow = "1.0.45"
regex = "1.5.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
