[package]
name = "avahi-aliases"
version = "0.1.1"
authors = [ "Scott G. Ainsworth" ]
edition = "2021"
description = "Avahi aliases manager"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["avahi", "zeroconf", "bonjour"]
categories = ["command-line-utilities", "os::linux-apis"]
publish = false
default-run = "avahi-alias"

[badges]
maintainance = { status = "experimental" }

[profile.release]
debug = false
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"

[dependencies]
anyhow = "1.0.45"
clap = "2.33.3"
dbus = "0.9.5"
env_logger = "0.9.0"
log = "0.4.14"
paw = "1.0.0"
regex = "1.5.4"
time = { version = "0.3.5", features = [ "formatting" ] }
structopt = { version = "0.3.25", default-features = false, features = [ "paw" ] }
sysinfo = "0.21.1"
syslog = "5.0.0"
thiserror = "1.0.30"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
